# snake

./: CMakeLists.txt  conanfile.txt  main.c
src/: snake.c  snake.h
textures/: logo.h  menu_o.h  menu_p.h  pick_a.h  pick_b.h  pick_c.h  pick_d.h
